--- a/ShoppingStore/Views/Shared/_Layout.cshtml
+++ b/ShoppingStore/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/jquery-typeahead/dist/jquery.typeahead.min.css"/>
+        <link rel="stylesheet" href="~/css/localization-typeahead.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/lib/x-editable/dist/bootstrap-editable/css/bootstrap-editable.css" />
     </environment>
@@ -57,7 +59,9 @@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/jquery-typeahead/dist/jquery.typeahead.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
