--- a/ShoppingStore/Views/Localization/Index.cshtml
+++ b/ShoppingStore/Views/Localization/Index.cshtml
@@ -39,7 +39,7 @@
         </div>
         <div class="form-group">
             <label for="addValue">@Localizer["Localized_Value"]</label>
-            <textarea  rows="10" class="form-control"></textarea>
+            <textarea  name="value" rows="10" class="form-control"></textarea>
         </div>
         <div class="form-group">
             <button class="btn btn-primary" type="submit">@Localizer["Add"]</button>
@@ -219,11 +219,11 @@
 
                         var text = "";
                         if (result.length > 0 && result.length < resultCount) {
-                            text = "Showing <strong>" + result.length + "</strong> of <strong>" + resultCount + '</strong> elements matching "' + query + '"';
+                            text = "@Localizer["Showing"] <strong>" + result.length + "</strong> @Localizer["ElementsAndTotal"] <strong>" + resultCount + "</strong> @Localizer["ElementsMatchingElement"] <strong>" + "\"" + query + "\"";
                         } else if (result.length > 0) {
-                            text = 'Showing <strong>' + result.length + '</strong> elements matching "' + query + '"';
+                            text = '@Localizer["Showing"] <strong>' + result.length + '</strong> @Localizer["ElementMatch"] "' + query + '"';
                         } else {
-                            text = 'No results matching "' + query + '"';
+                            text = '@Localizer["NoResultsMatch"] \"' + query + '"';
                         }
                         $('#result-container').html(text);
 
